Minimum Viable Glob

--- a/Glob/appsettings.json
+++ b/Glob/appsettings.json
@@ -1,6 +1,6 @@
 ﻿{
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-Glob-6233DB83-5D07-44FF-A76E-C5194C722A67;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=172.20.20.32;Database=GlobDB;User Id=glob;Password='Salakala!23'"
   },
   "Logging": {
     "IncludeScopes": false,
